[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My dotfiles, deployed with Ansible."
authors = ["Fabian Köhler <me@fkoehler.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^11.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^24.0.0"
isort = "^5.12.0"
ansible-lint = { version = "^24.0.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
